--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -1,4 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-    <p>Welcome to the home page!</p>
+    <h5>Recent Palettes</h5>
+    <hr>
+    <section id="recent-palettes">
+        {% if palettes|length > 0 %}
+            {% for palette in palettes %}
+            <div class="palette-prev">
+                <div class="color-main" id="color-main" style="background-color: {{palette.main}};"></div>
+                <div class="color-small" id="color-light-c" style="background-color: {{palette.light_c}};"></div>
+                <div class="color-small" id="color-light-a" style="background-color: {{palette.light_a}};"></div>
+                <div class="color-small" id="color-dark-c" style="background-color: {{palette.dark_c}};"></div>
+                <div class="color-small" id="color-dark-a" style="background-color: {{palette.dark_a}};"></div>
+                <a href='/palettes/{{ palette.id }}'>
+                    <h6>{{ palette.name }}</h6>
+                </a>
+            </div>
+            {% endfor %}
+        {% else %}
+            <p>No palettes have been made yet!</p>
+        {% endif %}
+    </section>
 {% endblock %}
+
