added edit profiles, 403 handling

--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="static/stylesheets/base.css">
+    <link rel="stylesheet" href="http://127.0.0.1:5000/static/stylesheets/base.css">
     <title>Palette Place</title>
 </head>
 <body>
-    <section id="header">
+    <div id="header">
         <ul id="header-links">
             <li>
                 <a id='home-link' href='/'>Palette Place</a>
@@ -34,7 +34,12 @@
         </ul>
         <br class="break">
         <hr>
-    </section>
+    </div>
+    <div id="errors" class="containers">
+            {% for category, message in get_flashed_messages(with_categories=True) %}
+            <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor %}
+    </div>
     {% block content %}
     {% endblock %}
     <script src="https://unpkg.com/jquery"></script>
