--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 <h3>Create a New Palette</h3>
-<p>Lock colors and the API will generate colors to compliment them!</p>
+<p>Pick and lock colors and the API will generate colors to compliment them!</p>
 <div id="color-section">
     <form>
         {% for color_key in colors.keys() %}
             {% set color = colors[color_key] %}
             <div class="color-picker" id="{{color_key}}">
-                <h4>{{color_key}}</h4>
+                <h4 class="color-header">{{color_key}}</h4>
                 <input type="color" id="{{color_key}}-picker" name="{{color_key}}-color" value="{{color}}">
                 <br>
                 <div class="checkbox-cont">
@@ -18,4 +18,9 @@
         {% endfor %}
     </form>
 </div>
+<hr>
+{% endblock %}
+
+{% block scripts %}
+<script src="http://127.0.0.1:5000/static/javascript/create.js"></script>
 {% endblock %}
