added delete route, started generate route

--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -60,3 +60,9 @@ input[type=color]{
     width: 200px;
     text-align: center;
 }
+
+#button-div{
+    margin: auto;
+    width: 33%;
+    padding-top: 10px;
+}
