--- a/code/templates/users/edit.html
+++ b/code/templates/users/edit.html
@@ -21,7 +21,16 @@
             <button class="btn btn-success">Confirm</button>
             <a href="/users/{{ g.user.id }}" class="btn btn-outline-secondary">Return</a>
         </div>
-    
     </form>
 </div>
+<div id="del-button-cont">
+    <button class="btn btn-danger" id="del-button">Delete Profile</button>
+    <a href="/users/{{g.user.id}}/delete">
+        <button class="btn btn-danger" id="confirm-button">Confirm Deletion</button>
+    </a>
+</div>
+{% endblock %}
+
+{% block scripts %}
+<script src="http://127.0.0.1:5000/static/javascript/userDelete.js"></script>
 {% endblock %}
