--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -37,6 +37,12 @@
     clear:both;
 }
 
+#profile-pic{
+    width: 200px;
+    height: 200px;
+    border: 2px solid black;
+}
+
 #color-section{
     margin: auto;
     width: 60%;
@@ -77,4 +83,34 @@ input[type=color]{
     background-color: lightskyblue;
     border: 2px solid black;
     border-radius: 5px;
+}
+
+.palette-prev{
+    display: inline-block;
+    border: 2px solid black;
+    text-align: center;
+}
+
+.color-main{
+    width: 213px;
+    height: 200px;
+}
+
+.color-small{
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+}
+
+.color-box{
+    display: inline-block;
+    border: 2px solid black;
+    text-align: center;
+}
+
+.color-display{
+    width: 200px;
+    height:200px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
