--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -114,3 +114,14 @@ input[type=color]{
     border-top: 2px solid black;
     border-bottom: 2px solid black;
 }
+
+#tag-section ul{
+    list-style-type: none;    
+}
+
+#tag-section li{
+    float: left;
+    padding: 4px;
+    height: 50px;
+    text-align: center;
+}
