--- a/code/templates/palettes/edit.html
+++ b/code/templates/palettes/edit.html
@@ -17,7 +17,7 @@
 </div>
 <div id="del-button-cont">
     <button class="btn btn-danger" id="del-button">Delete Palette</button>
-    <a href="/users/{{palette.id}}/delete">
+    <a href="/palettes/{{palette.id}}/delete">
         <button class="btn btn-danger" id="confirm-button">Confirm Deletion</button>
     </a>
 </div>
