--- a/code/templates/palettes/view.html
+++ b/code/templates/palettes/view.html
@@ -1,20 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <h3>{{palette.name}}</h3>
 <h4>Created by <a href="/users/{{palette.user[0].id}}">{{palette.user[0].username}}</a></h4>
 <i>{{palette.date_created}}</i>
 <p>{{palette.desc}}</p>
+
 {% if g.user.id == palette.user[0].id %}
     <a href="/palettes/{{palette.id}}/edit"><button class="btn btn-success">Edit</button></a>
 {% elif palette in g.user.favorites %}
-    <a href="/palettes/{{palette.id}}/unfavorite">
-        <button id='toggle-fav' class="btn btn-danger">Unfavorite</button>
-    </a>
+    <button id='toggle-fav' class="btn btn-danger" data-palid = "{{palette.id}}">Unfavorite</button>
 {% else %}
-    <a href="/palettes/{{palette.id}}/favorite">
-        <button id='toggle-fav' class="btn btn-warning">Favorite</button>
-    </a>
+    <button id='toggle-fav' class="btn btn-warning" data-palid = "{{palette.id}}">Favorite</button>
 {% endif %}
+
 <div id="color-section">
     <!-- VSCode will think the inline styles will cause errors. They won't.-->
     <div id="main-color" class="color-box">
