--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -1,3 +1,4 @@
+
 #header-links{
     list-style-type: none;
     margin:0;
@@ -89,17 +90,21 @@ input[type=color]{
     display: inline-block;
     border: 2px solid black;
     text-align: center;
+
 }
 
 .color-main{
     width: 213px;
     height: 200px;
+    border: 2px solid black;
 }
 
 .color-small{
     width: 50px;
     height: 50px;
     display: inline-block;
+    border: 2px solid black;
+    border-top: none;
 }
 
 .color-box{
@@ -125,3 +130,4 @@ input[type=color]{
     height: 50px;
     text-align: center;
 }
+
