--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -28,6 +28,12 @@
     top: 10px;
 }
 
+#recent-palettes{
+    width: 100%;
+    margin: auto;
+    text-align: center;    
+}
+
 .other-links{
     font-size: 30px;
     position: relative;
@@ -90,13 +96,13 @@ input[type=color]{
     display: inline-block;
     border: 2px solid black;
     text-align: center;
-
+    margin: 2px;
 }
 
 .color-main{
     width: 213px;
     height: 200px;
-    border: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
 .color-small{
@@ -105,6 +111,14 @@ input[type=color]{
     display: inline-block;
     border: 2px solid black;
     border-top: none;
+}
+
+.no-left-border{
+    border-left: none;
+}
+
+.no-right-border{
+    border-right: none;
 }
 
 .color-box{
@@ -131,3 +145,14 @@ input[type=color]{
     text-align: center;
 }
 
+#footer {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+}
+
+#pal-div{
+    width: 100%;
+    margin: auto;
+    text-align: center;    
+}
