--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -13,9 +13,9 @@
             <li>
                 <a id='home-link' href='/'>Palette Place</a>
             </li>
-            <!--<li> 
-                <a id='search-link' href="/palettes/search">Search</a>
-            </li> -->
+            <li> 
+                <a id='search-link' href="/palettes/browse">Browse</a>
+            </li>
             {% if g.user %}
                 <li>
                     <a class="other-links" href="/palettes/new">Create</a>
