added basic styling

--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -47,6 +47,13 @@
     {% endblock %}
     <br>
     <hr>
+    <div id="footer">
+        <p>Created by <a href="https://www.linkedin.com/in/alex-locke-2019/">Alex Locke</a>
+        <p>Capstone 1 Project for the Springboard Software Engineering Bootcamp</p>
+        <p>2023</p>
+    </div>
+
+
     <script src="https://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
     {% block scripts %}
