--- a/code/templates/palettes/browse.html
+++ b/code/templates/palettes/browse.html
@@ -9,7 +9,7 @@
     <div id="pal-div">
     </div>
     <br>
-    <div id="footer">
+    <div id="more-button">
         <button id="load-but" class="btn btn-primary">See More</button>
     </div>
 
