--- a/code/templates/palettes/view.html
+++ b/code/templates/palettes/view.html
@@ -49,7 +49,7 @@
         <li><h4>Tags:</h4></li>
         {% for tag in palette.tags %}
             <li>
-                <button class="btn btn-info">{{tag.name}}</button>
+                <button class="btn btn-info" disabled>{{tag.name}}</button>
             </li>
         {% endfor %}
     </ul>
