--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -1,8 +1,32 @@
+body{
+    background-color: #224D94;
+    color:#E5EBEF;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
+body a{
+    color:#E5EBEF;
+}
+
+hr{
+    color:#E5EBEF;
+}
+
+#footer{
+    width:100%;
+    text-align: center;
+}
+
+#footer p{
+    margin-bottom: 0px;
+}
 
 #header-links{
     list-style-type: none;
     margin:0;
     padding:0;
+    
 }
 
 #header-links li{
@@ -14,6 +38,7 @@
     display:block;
     padding: 8px;
     text-decoration: none;
+    color: #E5EBEF;
 }
 
 #home-link{
@@ -58,6 +83,10 @@
 .color-picker{
     display: inline-block;
     border: 2px solid black;
+    background-color: #E5EBEF;
+}
+.color-picker h4, .color-picker label{
+    color:#444D66;
 }
 
 input[type=color]{
@@ -97,6 +126,11 @@ input[type=color]{
     border: 2px solid black;
     text-align: center;
     margin: 2px;
+    background-color: #E5EBEF;
+}
+
+.palette-prev i, .palette-prev a{
+    color: #224D94
 }
 
 .color-main{
@@ -145,7 +179,7 @@ input[type=color]{
     text-align: center;
 }
 
-#footer {
+#more-button {
     width: 100%;
     margin: auto;
     text-align: center;
@@ -155,4 +189,35 @@ input[type=color]{
     width: 100%;
     margin: auto;
     text-align: center;    
+}
+
+.btn-info{
+    background-color:#64B3D8;
+    color: #444D66;
+}
+
+.btn-secondary{
+    background-color: #64B3D8;
+    color: #444D66;
+}
+
+#info{
+    margin-left: 10px;
+}
+
+.login-field, .register-field{
+    width: 10%;
+    margin: 8px;
+}
+
+.edit-field{
+    margin-bottom: 8px;
+}
+
+.edit-password{
+    width: 40%;
+}
+
+button{
+    margin: 8px;
 }
