--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3>Create a New Palette</h3>
-<p>Pick and lock colors and the API will generate colors to compliment them!</p>
-<p>
-    <ul>
-        <li>Locking too many colors may have the generator keep yielding the same results.</li>
-        <li>Locked colors may shift with each generation.</li>
-    </ul>
-</p>
+<div id="info">
+    <h3>Create a New Palette</h3>
+    <p>Pick and lock colors and the API will generate colors to compliment them!</p>
+    <p>
+        <ul>
+            <li>Locking too many colors may have the generator keep yielding the same results.</li>
+            <li>Locked colors may slightly shift with each generation.</li>
+        </ul>
+    </p>
+</div>
 <div id="color-section">
     <form>
         {% for color_key in colors.keys() %}
@@ -54,7 +56,6 @@
         </div>
     </form>
 </div>
-<hr>
 <div id="sample-site">
     
 </div>
