--- a/code/templates/users/login.html
+++ b/code/templates/users/login.html
@@ -7,7 +7,7 @@
             {% for error in field.errors %}
                 <span class="text-danger">{{ error }}</span>
             {% endfor %}
-        {{ field(placeholder=field.label.text, class='form-control') }}
+        {{ field(placeholder=field.label.text, class='form-control login-field') }}
         {% endfor %}
         <button class="btn btn-success">Login</button>
     </form>
