--- a/code/templates/users/register.html
+++ b/code/templates/users/register.html
@@ -8,7 +8,7 @@
             {% for error in field.errors %}
                 <span class="text-danger">{{ error }}</span>
             {% endfor %}
-        {{ field(placeholder=field.label.text, class='form-control') }}
+        {{ field(placeholder=field.label.text, class='form-control register-field') }}
         {% endfor %}
         <button class="btn btn-success">Submit</button>
     </form>
