--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -206,8 +206,14 @@ input[type=color]{
 }
 
 .login-field, .register-field{
-    width: 10%;
-    margin: 8px;
+    width: 15%;
+    margin-bottom: 8px;
+}
+
+.desc-field{
+    width: 15%;
+    height: 150px;
+    margin-bottom: 8px;
 }
 
 .edit-field{
@@ -220,4 +226,9 @@ input[type=color]{
 
 button{
     margin: 8px;
+}
+
+#palette-editor{
+    margin: auto;
+    width: 100%;
 }
