added character counters

--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -37,9 +37,9 @@
             <button class="btn btn-secondary" id="save-button">Save Palette</button>
         </div>
         <div id="field-div">
-            <label for="name">Name</label>
+            <label for="name">Name (<i id="name-counter"></i>)</label>
             <input type="text" id="name" name="name" class="form-control" placeholder="Required. Max 20 characters.">
-            <label for="desc">Description</label>
+            <label for="desc">Description (<i id="desc-counter"></i>)</label>
             <textarea id="desc" class="form-control" name="desc" rows="2" placeholder="Optional. Max 200 characters."></textarea>
             <label>Tags</label>
             <div id="tag-cont">
