--- a/code/templates/palettes/edit.html
+++ b/code/templates/palettes/edit.html
@@ -31,6 +31,7 @@
 <div class="palette-editor" id="{{palette.id}}">
         <form id="edit-form">
             <input type="text" id="name" class='form-control login-field' value="{{palette.name}}">
+            <p>Max description length 200 characters. (<i id="char-counter"></i>)</p>
             <textarea id="desc" class="form-control desc-field" name="desc" rows="2">{{palette.desc}}</textarea>
             <div id="tag-cont">
                 {% for tag in tags %}
