--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="http://0.0.0.0:10000/static/stylesheets/base.css">
+    <link rel="stylesheet" href="/static/stylesheets/base.css">
     <title>Palette Place</title>
 </head>
 <body>
