changed resource links for render.com

--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -61,5 +61,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="http://127.0.0.1:5000/static/javascript/paletteCreate.js"></script>
+<script src="/static/javascript/paletteCreate.js"></script>
 {% endblock %}
