--- a/code/templates/palettes/view.html
+++ b/code/templates/palettes/view.html
@@ -58,6 +58,6 @@
 
 {% endblock %}
 {% block scripts %}
-<script src="http://127.0.0.1:5000/static/javascript/paletteFavorite.js"></script>
+<script src="/static/javascript/paletteFavorite.js"></script>
 {% endblock %}
 
