--- a/code/templates/users/edit.html
+++ b/code/templates/users/edit.html
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="http://127.0.0.1:5000/static/javascript/userEdit.js"></script>
+<script src="/static/javascript/userEdit.js"></script>
 {% endblock %}
