--- a/code/templates/palettes/browse.html
+++ b/code/templates/palettes/browse.html
@@ -15,6 +15,6 @@
 
 {% endblock %}
 {% block scripts %}
-<script src="http://127.0.0.1:5000/static/javascript/paletteBrowse.js"></script>
+<script src="/static/javascript/paletteBrowse.js"></script>
 {% endblock %}
 
