--- a/code/templates/palettes/edit.html
+++ b/code/templates/palettes/edit.html
@@ -56,5 +56,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="http://127.0.0.1:5000/static/javascript/paletteEdit.js"></script>
+<script src="/static/javascript/paletteEdit.js"></script>
 {% endblock %}
