--- a/code/static/stylesheets/base.css
+++ b/code/static/stylesheets/base.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #224D94;
+    background-color: #263a5e;
     color:#E5EBEF;
     margin-left: 8px;
     margin-right: 8px;
