--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="info">
     <h3>Create a New Palette</h3>
-    <p>Pick and lock colors and the API will generate colors to compliment them!</p>
+    <p>Pick and lock colors and the API will generate other colors to compliment them!</p>
     <p>
         <ul>
             <li>Locking too many colors may have the generator keep yielding the same results.</li>
