overhauled system for adding tags in creation

--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -44,8 +44,7 @@
             <label for="desc">Description (<i id="desc-counter"></i>)</label>
             <textarea id="desc" class="form-control" name="desc" rows="2" placeholder="Optional. Max 200 characters."></textarea>
             <label>Tags</label>
-            <div>
-                <ul id="added-tags"></ul>
+            <div id="added-tags">
             </div>
             <input type="text" name="tag-search" id="tag-search" placeholder="Search for Tags" class="form-control">
             <div>
