overhauled tagging system

--- a/code/templates/palettes/create.html
+++ b/code/templates/palettes/create.html
@@ -47,8 +47,7 @@
             <div id="added-tags">
             </div>
             <input type="text" name="tag-search" id="tag-search" placeholder="Search for Tags" class="form-control">
-            <div>
-                <ul id="suggestions"></ul>
+            <div id="suggestions">
             </div>
             <br>
             <button class="btn btn-success" id="confirm-button" disabled>Confirm</button>
