--- a/code/templates/palettes/edit.html
+++ b/code/templates/palettes/edit.html
@@ -40,8 +40,7 @@
                 {% endfor %}
             </div>
             <input type="text" name="tag-search" id="tag-search" placeholder="Search for Tags" class="form-control">
-            <div>
-                <ul id="suggestions"></ul>
+            <div id="suggestions">
             </div>
             <br>
         </form>
