--- a/code/templates/palettes/edit.html
+++ b/code/templates/palettes/edit.html
@@ -39,7 +39,7 @@
                     <button name="{{tag.name}}" id="{{tag.name}}" class="btn btn-secondary">{{tag.name}}</button>
                 {% endfor %}
             </div>
-            <input type="text" name="tag-search" id="tag-search" placeholder="Search for Tags" class="form-control">
+            <input type="text" name="tag-search" id="tag-search" placeholder="Search for Tags" class="form-control" autocomplete="off">
             <div id="suggestions">
             </div>
             <br>
